[package]
name = "ball_game"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.9.1"
bevy_rapier2d = { version = "0.19.0", features = ["simd-nightly"] }
bevy_tweening = "0.6.0"
num-bigint = "0.4.3"
ron = "0.8.0"
